--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,9 +16,8 @@ jobs:
       matrix:
         linter: [cppcheck, xmllint]
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: ros-tooling/setup-ros@0.3.2
-      - uses: ros-tooling/action-ros2-lint@0.0.6
+      - uses: ros-tooling/setup-ros@v0.3
+      - uses: ros-tooling/action-ros-ci@v0.2
         with:
-          linter: ${{ matrix.linter }}
-          package-name: test
+          package-name: my_package
+          target-ros1-distro: melodic
