Removed action-ros-ci

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,7 @@ jobs:
         linter: [cppcheck, xmllint]
     steps:
       - uses: ros-tooling/setup-ros@v0.3
-      - uses: ros-tooling/action-ros-ci@v0.2
+      #- uses: ros-tooling/action-ros-ci@v0.2
         with:
-          package-name: my_package
+          package-name: test
           target-ros1-distro: melodic
