--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,5 +18,5 @@ jobs:
       with:
         ros-version: 'melodic'
         build-tool: 'catkin_tools'
-        workspace: '$GITHUB_WORKSPACE'
+        workspace: cpp_template_pkg
     - run: catkin build
