--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
       with:
-        path: $HOME/cpp_template_pkg
+        path: $GITHUB_WORKSPACE/cpp_template_pkg
     - uses: betwo/github-setup-catkin@master
       with:
         ros-version: 'melodic'
         build-tool: 'catkin_tools'
-        workspace: $HOME/cpp_template_pkg
+        workspace: $GITHUB_WORKSPACE/cpp_template_pkg
     - run: catkin build
