Börjar tröttna på det här

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,11 +12,9 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v1
-      with:
-        path: ./cpp_template_pkg
     - uses: betwo/github-setup-catkin@master
       with:
         ros-version: 'melodic'
         build-tool: 'catkin_tools'
-        workspace: ./cpp_template_pkg
+        workspace: '$GITHUB_WORKSPACE'
     - run: catkin build
