Hoppet är det sista som överger en

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,3 +18,4 @@ jobs:
         build-tool: 'catkin_tools'
         workspace: '$GITHUB_WORKSPACE'
     - run: catkin build
+    - run: roslaunch example test.launch
