Gör det här något?

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,5 +17,6 @@ jobs:
         ros-version: 'melodic'
         build-tool: 'catkin_tools'
         workspace: '$GITHUB_WORKSPACE'
-    - run: catkin build
+    - run: | 
+        catkin build
     - run: roslaunch example test.launch
