--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,10 @@ jobs:
         ros-version: 'melodic'
         build-tool: 'catkin_tools'
         workspace: '$GITHUB_WORKSPACE'
-    - run: catkin build
-    - run: source devel/setup.bash
-    - run: roslaunch example test.launch
+    - run: |
+        catkin build
+        source devel/setup.bash
+        roslaunch example test.launch
+    #- run: source devel/setup.bash
+    #- run: roslaunch example test.launch
     
