--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         ros-version: 'melodic'
         build-tool: 'catkin_tools'
-        workspace: '$GITHUB_WORKSPACE'
+        workspace: '$GITHUB_WORKSPACE/venne'
     - run: |
         catkin build
         source devel/setup.bash
