--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,9 +16,9 @@ jobs:
       with:
         ros-version: 'melodic'
         build-tool: 'catkin_tools'
-        workspace: $GITHUB_WORKSPACE/venne
-        working-directory: ./venne  
+        workspace: $GITHUB_WORKSPACE
     - run: |
+        cd venne
         catkin build
         source devel/setup.bash
         roslaunch example test.launch
