--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,6 +20,9 @@ jobs:
         workspace: $GITHUB_WORKSPACE
     - run: |
         cd venne
+        mkdir src 
+        mv example src
+        cd src
         catkin build
         source devel/setup.bash
         roslaunch example test.launch
