--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,12 +12,22 @@ jobs:
     name: IDK
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v1
-    - uses: GuillaumeFalourd/clone-github-repo-action@v2
-      with: 
-        owner: 'Stenmarken'
-        repository: 'test-action-ros-ci'
-        access-token: ${{ secrets.ACCESS_TOKEN }}
+    - uses: actions/checkout@v2
+      with:
+        repository: Stenmarken/test-actions-ros-ci
+        token: ${{ secrets.ACCESS_TOKEN }}
+    - uses: betwo/github-setup-catkin@master
+      with:
+        ros-version: 'melodic'
+        build-tool: 'catkin_tools'
+        workspace: $GITHUB_WORKSPACE
+    - run: |
+        cd venne
+        mkdir src 
+        mv example src
+        catkin build
+        source devel/setup.bash
+        roslaunch example test.launch
         
     #- run: source devel/setup.bash
     #- run: roslaunch example test.launch
